--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
     <string name="prompt_password_again">Confirm Password</string>
-    <string name="prompt_msg">Type a message</string>
+    <string name="prompt_msg">Message</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
